# nostdbuild

./: .gitignore  Cargo.toml  README.md  TODO  test-all
evalution/: Cargo.toml
evalution/src/: main.rs
src/: compiler.rs  consts.rs  db.rs  downloader.rs  driver.rs  hir.rs  lib.rs  parser.rs  phases.rs  solver.rs  types.rs  visitor.rs
src/hir_driver/: mod.rs
testing/: Cargo.toml
testing/metrics/: downloads.txt  nostd_failed_build.txt  nostd_failed_build_urls.txt
testing/results/: ab_glyph-0.2.23.json  ab_glyph_rasterizer-0.1.8.json  aberth-0.0.4.json  ac-compose-macros-0.3.0.json  ac-node-api-0.3.0.json  ac-primitives-0.6.0.json  accumulate-3.0.0.json  ad9361-rs-0.1.0.json  adsb_deku-0.7.0.json  adxl345_driver2-2.0.0.json  akd_client-0.8.9.json  algorithms-rs-0.1.11.json  alkahest-0.3.0.json  alloc_counter-0.0.4.json  alt_serde_json-1.0.61.json  amplify_apfloat-0.2.0.json  anychain-bitcoin-0.1.4.json  anychain-core-0.1.3.json  anychain-ethereum-0.1.8.json  aommap-0.3.1.json  aott-0.2.0.json  apdu-core-0.4.0.json  arcturus-0.4.0.json  argparsnip-0.1.6.json  arithmetic-parser-0.3.0.json  ark-bls12-377-0.4.0.json  ark-bls12-381-0.4.0.json  ark-bn254-0.4.0.json  ark-bulletproofs-4.1.1.json  armour-0.11.0.json  array-bin-ops-0.1.6.json  asciirend-0.3.1.json  assets-common-0.7.0.json  astr-0.3.1.json  async-coap-uri-0.1.0.json  async_fn-0.0.2.json  atb-0.1.0.json  atoi-2.0.0.json  atty-0.2.14.json  auto_enums-0.8.5.json  (+791 more)
testing/scripts/: automate.py  build_times.py  clone.py  count_successful.py  crate_downloads.py  wget-it.py
testing/src/: main.rs  out.txt  paper.rs  stuff.rs  testing.rs
tests/: cegar_tests.rs  cfg_attr_applied_tests.rs  cfg_if_mod_decl_tests.rs  cfg_if_tests.rs  common.rs  compile_error_constraint_tests.rs  cross_crate_items_tests.rs  driver_tests.rs  external_cfg_gate_tests.rs  field_value_cfg_tests.rs  if_std_macro_tests.rs  include_cfg_tests.rs  integration.rs  macro_cfg_tests.rs  macro_mod_decl_tests.rs  main_tests.rs  normalize_tests.rs  out_dir_include_tests.rs  positional_cfg_tests.rs  raw_ident_mod_tests.rs  stacked_cfg_tests.rs  std_tests.rs  undeclared_feature_tests.rs  workspace_member_tests.rs
tests/fixtures/cfg_attr_applied/: lib.rs
tests/fixtures/cfg_if_macro/: lib.rs
tests/fixtures/cfg_if_mod_decl/: bare.rs  featmod.rs  lib.rs  sub.rs
tests/fixtures/compile_error_constraint/: bulletproofs_shape.rs  no_constraint.rs  uom_shape.rs
tests/fixtures/external_cfg_gate/: lib.rs
tests/fixtures/field_value_cfg/: lib.rs
tests/fixtures/if_std_macro/: lib.rs
tests/fixtures/include_cfg/: inc_gated.rs  inc_ungated.rs  lib.rs
tests/fixtures/macro_cfg_invocation/: lib.rs
tests/fixtures/macro_mod_decl/: child.rs  leaf.rs  lib.rs
tests/fixtures/out_dir_include/: lib.rs  proto.rs
tests/fixtures/positional_cfg/: lib.rs
tests/fixtures/raw_ident_mod/: lib.rs
tests/fixtures/stacked_cfg/: lib.rs
tests/fixtures/test_alloc_only/: Cargo.toml  main.rs
tests/fixtures/test_cegar_ordering/: Cargo.toml  main.rs
tests/fixtures/test_cfg_gated_match_arm/: Cargo.toml  main.rs
tests/fixtures/test_cfg_target_os_std/: Cargo.toml  main.rs
tests/fixtures/test_extern_std/: Cargo.toml  expected.json  main.rs
tests/fixtures/test_extern_std_on_feature/: Cargo.toml  expected1.json  expected2.json  main.rs
tests/fixtures/test_feature_causes_std_usage/: Cargo.toml  expected1.json  expected2.json  main.rs
tests/fixtures/test_feature_implies_std_transitively/: Cargo.toml  main.rs
tests/fixtures/test_import_to_use_gated/: Cargo.toml  main.rs
tests/fixtures/test_local_facade_deep/: Cargo.toml  main.rs
tests/fixtures/test_local_facade_std/: Cargo.toml  main.rs
tests/fixtures/test_probe_cegar_retry/: Cargo.toml  main.rs
tests/fixtures/test_root_extern_crate_std/: Cargo.toml  main.rs
tests/fixtures/test_std_in_std_mode/: Cargo.toml  main.rs
tests/fixtures/test_trait_method_std_gated/: Cargo.toml  main.rs
tests/fixtures/test_vec_direct_usage/: Cargo.toml  expected.json  main.rs
tests/fixtures/test_vec_used_via_use/: Cargo.toml  expected.json
tests/fixtures/undeclared_feature/: Cargo.toml  lib.rs
tests/fixtures/vec_direct_usage/: Cargo.toml  expected.json
tests/fixtures/vec_used_via_use/: Cargo.toml  expected.json  main.rs
tests/main_tests_jsons/aberth-0.4.1/: compilation_results.json
(+29 files in other folders)
