[package]
name = "nostd"
version = "0.1.0"
edition = "2024"

[package.metadata.rust-analyzer]
rustc_private=true

[lib]
path = "src/lib.rs"

[[bin]]
name = "cargo-hir"
path = "src/hir_driver/bin/cargo-hir.rs"

[[bin]]
name = "hir-driver"
path = "src/hir_driver/bin/hir-driver.rs"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
git2 = "0.20.0"
env_logger = "0.11.6"
log = "0.4.25"
crates_io_api = "0.11.0"
reqwest = "0.12.12"
anyhow = "1.0.95"
tar = "0.4.43"
flate2 = "1.0.35"
lazy_static = "1.5.0"
walkdir = "2.5.0"
semver = "1.0.25"
cargo_metadata = "0.19.1"
quote = "1.0.38"
syn = { version = "2.0.104", features = ["visit", "parsing", "full", "extra-traits"] }
proc-macro2 = {version = "1.0.93", features = ["span-locations"]}
z3 = "0.12.1"
toml = "0.8.20"
serde = "1.0.219"
serde_json = "1.0.140"
bincode = "=2.0.0"
rustc_plugin = "=0.14.1-nightly-2025-08-20"
which = "8.0.0"
const_format = "0.2.34"