[package]
name = "testing"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13.0"
proc-macro2 = "1.0.89"
regex = "1.11.1"
serde_json = "1.0.133"
syn = { version = "2.0", features = ["full", "extra-traits"] }
z3 = { git = "https://github.com/prove-rs/z3.rs.git", version="0.12", features = ["bundled"]}

[profile.release]
panic = 'abort'

[features]
foo = []
bar = []
joe = []
no_std = []
# if nothing is specified at command line, we use "foo"
# we can disable this with --no-default-features
default = ["foo", "joe"]
